2021-07-14  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: CWEB 4.5 release.

2021-06-06  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: CWEB 4.4 release.

2021-04-13  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: CWEB 4.3 release.

2021-03-07  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: Document 'ctwill-twinx' a bit more.

2021-03-04  Karl Berry  <karl@freefriends.org>

	* gftodvi.man: font and spacing fixes from Debian.
	Add tex-k as bug reporting address.

2021-02-25  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: CWEB 4.2 release.

2021-02-20  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: CWEB 4.1 release.

2020-09-23  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man,
	* cweb.man: Make manpages compatible with 'whatis'.

2020-06-14  Andreas Scherer  <https://ascherer.github.io>

	* ctwill.man: Mention new macros 'pdfctwimac.tex'.

2020-06-08  Andreas Scherer  <https://ascherer.github.io>

	* ctie.man,
	* ctwill.man,
	* cweb.man,
	* tie.man: Detail special environments for individual programs.

2020-06-06  Andreas Scherer  <https://ascherer.github.io>

	* tex.man: Complete sentence about TEXINPUTS environment.

2020-03-30  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man,
	* ctwill.man: Add new option '-t' to CWEB.

2020-02-01  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man,
	* ctwill.man: Regenerate manpages with Pandoc 2.9.1.1.

2019-12-07  Andreas Scherer  <https://ascherer.github.io>

	* cweb.man,
	* ctwill.man: Update manpages.

2019-11-17  Karl Berry  <karl@tug.org>

	* latex-dev.man: new man page.
	* Makefile.am (man1_links): add several links for latex-dev and luatex.

2019-08-06  Karl Berry  <karl@freefriends.org>

	* aleph.man,
	* etex.man,
	* mf.man,
	* pdftex.man,
	* tex.man: mention --cnf-line.
	
2019-08-04  Karl Berry  <karl@freefriends.org>
