@@ -1,3 +1,7 @@
+2021-07-14  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* Makefile.am: lamed (aleph-based latex) is gone.
+
 2021-07-14  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctwill.man: CWEB 4.5 release.
